# Agentic-Research-Platform

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
agents/: evaluator.py  planner.py  writer.py
core/: config.py  llm.py  orchestrator.py  state.py
evaluation/: summary.py
rag/: chunking.py  retrieval.py
tools/: scrape_tools.py  search_tools.py
